// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCardField should render correctly 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.css-tjrecv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1megpuc {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1bc2sza {
  display: grid;
  grid-template-columns: repeat(1, auto);
  gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-1wln6wd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.css-1wln6wd[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.css-1wln6wd[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.css-1wln6wd[data-error='true'] {
  border: 1px solid #b3144d;
}

.css-1wln6wd[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-1wln6wd:hover:not([data-error='true']):not([data-disabled='true']),
.css-1wln6wd:focus-within:not([data-error='true']):not([data-disabled='true']),
.css-1wln6wd:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.css-1wln6wd:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.css-1wln6wd:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.css-1wln6wd:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ihkasm-StyledRadio {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.css-1ihkasm-StyledRadio[aria-disabled='false'],
.css-1ihkasm-StyledRadio[aria-disabled='false']>label {
  cursor: pointer;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-1ihkasm-StyledRadio:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ihkasm-StyledRadio:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-1ihkasm-StyledRadio:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-1ihkasm-StyledRadio:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-1ihkasm-StyledRadio[aria-disabled='true']>label,
.css-1ihkasm-StyledRadio[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ihkasm-StyledRadio[data-checked='true'] {
  color: #641cb3;
}

.css-1ihkasm-StyledRadio[data-error='true'] {
  color: #b3144d;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'] {
  color: #b5b7bd;
}

.css-1ihkasm-StyledRadio input+svg {
  display: none;
}

.css-1dt4s2g {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1dt4s2g+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1dt4s2g:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1dt4s2g:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1dt4s2g[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1dt4s2g[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1ijwlua {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1ijwlua .ehkrmld6 {
  fill: #ffffff;
}

.css-82a6rk {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="css-1civgmb ehpbis70"
    >
      <fieldset
        class="css-7o2an9 e1cxe6lb1"
      >
        <div
          class="css-tjrecv ehpbis70"
        >
          <legend
            class="css-1megpuc e13y3mga0"
          >
            test  
          </legend>
          <div
            class="css-1bc2sza e3f5lzv0"
          >
            <div
              class="css-1wln6wd e1s5n3hj3"
              data-checked="false"
              data-disabled="false"
              data-has-label="true"
              data-type="radio"
            >
              <div
                class="css-16otux ehpbis70"
              >
                <div
                  aria-disabled="false"
                  class="e1s5n3hj4 css-1ihkasm-StyledRadio ehkrmld2"
                  data-checked="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="css-1dt4s2g ehkrmld3"
                    id="test-radio 1"
                    name="test"
                    type="radio"
                    value="radio 1"
                  />
                  <svg
                    class="css-1ijwlua ehkrmld4"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="css-0 ehkrmld6"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="css-0 ehkrmld5"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="css-82a6rk ehkrmld1"
                    for="test-radio 1"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
            </div>
            <div
              class="css-1wln6wd e1s5n3hj3"
              data-checked="false"
              data-disabled="false"
              data-has-label="true"
              data-type="radio"
            >
              <div
                class="css-16otux ehpbis70"
              >
                <div
                  aria-disabled="false"
                  class="e1s5n3hj4 css-1ihkasm-StyledRadio ehkrmld2"
                  data-checked="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="css-1dt4s2g ehkrmld3"
                    id="test-radio 2"
                    name="test"
                    type="radio"
                    value="radio 2"
                  />
                  <svg
                    class="css-1ijwlua ehkrmld4"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="css-0 ehkrmld6"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="css-0 ehkrmld5"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="css-82a6rk ehkrmld1"
                    for="test-radio 2"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked as a checkbox 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.css-tjrecv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1megpuc {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1bc2sza {
  display: grid;
  grid-template-columns: repeat(1, auto);
  gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-1wln6wd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.css-1wln6wd[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.css-1wln6wd[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.css-1wln6wd[data-error='true'] {
  border: 1px solid #b3144d;
}

.css-1wln6wd[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-1wln6wd:hover:not([data-error='true']):not([data-disabled='true']),
.css-1wln6wd:focus-within:not([data-error='true']):not([data-disabled='true']),
.css-1wln6wd:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.css-1wln6wd:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.css-1wln6wd:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.css-1wln6wd:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.css-kgeni9-OverloadedCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  pointer-events: none;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq3 {
  cursor: pointer;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.css-kgeni9-OverloadedCheckbox[data-checked='true'] {
  color: #641cb3;
}

.css-kgeni9-OverloadedCheckbox[data-error='true'] {
  color: #b3144d;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] {
  color: #b5b7bd;
}

.css-kgeni9-OverloadedCheckbox input+svg {
  display: none;
}

.css-kgeni9-OverloadedCheckbox label {
  width: 100%;
}

.css-m3g6o6 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.css-m3g6o6:not(:disabled) {
  cursor: pointer;
}

.css-m3g6o6:disabled {
  cursor: not-allowed;
}

.css-m3g6o6:not(:disabled):checked+.eqr7bqq4,
.css-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.css-m3g6o6:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.css-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.css-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.css-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.css-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.css-m3g6o6:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.css-m3g6o6:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.css-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.css-15098z8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-cnr3aj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-1d3w5wq {
  width: 100%;
}

<form
    novalidate=""
  >
    <div
      class="css-1civgmb ehpbis70"
    >
      <fieldset
        class="css-7o2an9 e1cxe6lb1"
      >
        <div
          class="css-tjrecv ehpbis70"
        >
          <legend
            class="css-1megpuc e13y3mga0"
          >
            test  
          </legend>
          <div
            class="css-1bc2sza e3f5lzv0"
          >
            <div
              class="css-1wln6wd e1s5n3hj3"
              data-checked="true"
              data-disabled="false"
              data-has-label="true"
              data-testid="checked"
              data-type="checkbox"
            >
              <div
                aria-disabled="false"
                class="e1s5n3hj0 css-kgeni9-OverloadedCheckbox eqr7bqq1"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="css-m3g6o6 eqr7bqq2"
                  id=":rd:"
                  name="test"
                  type="checkbox"
                  value="checked"
                />
                <svg
                  class="css-55x4xn eqr7bqq4"
                  fill="none"
                  size="24"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="css-16eol3o eqr7bqq6"
                      height="16"
                      rx="2px"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="css-15098z8 ehpbis70"
                >
                  <div
                    class="css-cnr3aj ehpbis70"
                  >
                    <label
                      class="css-1d3w5wq eqr7bqq3"
                      for=":rd:"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked as radiofield 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.css-tjrecv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1megpuc {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1bc2sza {
  display: grid;
  grid-template-columns: repeat(1, auto);
  gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-1wln6wd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.css-1wln6wd[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.css-1wln6wd[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.css-1wln6wd[data-error='true'] {
  border: 1px solid #b3144d;
}

.css-1wln6wd[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-1wln6wd:hover:not([data-error='true']):not([data-disabled='true']),
.css-1wln6wd:focus-within:not([data-error='true']):not([data-disabled='true']),
.css-1wln6wd:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.css-1wln6wd:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.css-1wln6wd:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.css-1wln6wd:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ihkasm-StyledRadio {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.css-1ihkasm-StyledRadio[aria-disabled='false'],
.css-1ihkasm-StyledRadio[aria-disabled='false']>label {
  cursor: pointer;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-1ihkasm-StyledRadio:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ihkasm-StyledRadio:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-1ihkasm-StyledRadio:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-1ihkasm-StyledRadio:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-1ihkasm-StyledRadio[aria-disabled='true']>label,
.css-1ihkasm-StyledRadio[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ihkasm-StyledRadio[data-checked='true'] {
  color: #641cb3;
}

.css-1ihkasm-StyledRadio[data-error='true'] {
  color: #b3144d;
}

.css-1ihkasm-StyledRadio[aria-disabled='true'] {
  color: #b5b7bd;
}

.css-1ihkasm-StyledRadio input+svg {
  display: none;
}

.css-1dt4s2g {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1dt4s2g+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1dt4s2g:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1dt4s2g:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1dt4s2g[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1dt4s2g[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1dt4s2g[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1dt4s2g[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1ijwlua {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1ijwlua .ehkrmld6 {
  fill: #ffffff;
}

.css-82a6rk {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="css-1civgmb ehpbis70"
    >
      <fieldset
        class="css-7o2an9 e1cxe6lb1"
      >
        <div
          class="css-tjrecv ehpbis70"
        >
          <legend
            class="css-1megpuc e13y3mga0"
          >
            test  
          </legend>
          <div
            class="css-1bc2sza e3f5lzv0"
          >
            <div
              class="css-1wln6wd e1s5n3hj3"
              data-checked="true"
              data-disabled="false"
              data-has-label="true"
              data-testid="checked"
              data-type="radio"
            >
              <div
                class="css-16otux ehpbis70"
              >
                <div
                  aria-disabled="false"
                  class="e1s5n3hj4 css-1ihkasm-StyledRadio ehkrmld2"
                  data-checked="true"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    checked=""
                    class="css-1dt4s2g ehkrmld3"
                    id="test-checked"
                    name="test"
                    type="radio"
                    value="checked"
                  />
                  <svg
                    class="css-1ijwlua ehkrmld4"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="css-0 ehkrmld6"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="css-0 ehkrmld5"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="css-82a6rk ehkrmld1"
                    for="test-checked"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should trigger events correctly 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.css-tjrecv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1megpuc {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1bc2sza {
  display: grid;
  grid-template-columns: repeat(1, auto);
  gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-1wln6wd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.css-1wln6wd[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.css-1wln6wd[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.css-1wln6wd[data-error='true'] {
  border: 1px solid #b3144d;
}

.css-1wln6wd[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-1wln6wd:hover:not([data-error='true']):not([data-disabled='true']),
.css-1wln6wd:focus-within:not([data-error='true']):not([data-disabled='true']),
.css-1wln6wd:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.css-1wln6wd:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.css-1wln6wd:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.css-1wln6wd:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.css-kgeni9-OverloadedCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  pointer-events: none;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq3 {
  cursor: pointer;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-kgeni9-OverloadedCheckbox:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.css-kgeni9-OverloadedCheckbox .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.css-kgeni9-OverloadedCheckbox[data-checked='true'] {
  color: #641cb3;
}

.css-kgeni9-OverloadedCheckbox[data-error='true'] {
  color: #b3144d;
}

.css-kgeni9-OverloadedCheckbox[aria-disabled='true'] {
  color: #b5b7bd;
}

.css-kgeni9-OverloadedCheckbox input+svg {
  display: none;
}

.css-kgeni9-OverloadedCheckbox label {
  width: 100%;
}

.css-m3g6o6 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.css-m3g6o6:not(:disabled) {
  cursor: pointer;
}

.css-m3g6o6:disabled {
  cursor: not-allowed;
}

.css-m3g6o6:not(:disabled):checked+.eqr7bqq4,
.css-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.css-m3g6o6:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.css-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.css-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.css-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.css-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.css-m3g6o6:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.css-m3g6o6:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.css-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.css-15098z8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-cnr3aj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-1d3w5wq {
  width: 100%;
}

<form
    novalidate=""
  >
    <div
      class="css-1civgmb ehpbis70"
    >
      <fieldset
        class="css-7o2an9 e1cxe6lb1"
      >
        <div
          class="css-tjrecv ehpbis70"
        >
          <legend
            class="css-1megpuc e13y3mga0"
          >
            test  
          </legend>
          <div
            class="css-1bc2sza e3f5lzv0"
          >
            <div
              class="css-1wln6wd e1s5n3hj3"
              data-checked="false"
              data-disabled="false"
              data-has-label="true"
              data-type="checkbox"
            >
              <div
                aria-disabled="false"
                class="e1s5n3hj0 css-kgeni9-OverloadedCheckbox eqr7bqq1"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="css-m3g6o6 eqr7bqq2"
                  id=":rh:"
                  name="test"
                  type="checkbox"
                  value="radio 1"
                />
                <svg
                  class="css-55x4xn eqr7bqq4"
                  fill="none"
                  size="24"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="css-16eol3o eqr7bqq6"
                      height="16"
                      rx="2px"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="css-15098z8 ehpbis70"
                >
                  <div
                    class="css-cnr3aj ehpbis70"
                  >
                    <label
                      class="css-1d3w5wq eqr7bqq3"
                      for=":rh:"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1wln6wd e1s5n3hj3"
              data-checked="false"
              data-disabled="false"
              data-has-label="true"
              data-type="checkbox"
            >
              <div
                aria-disabled="false"
                class="e1s5n3hj0 css-kgeni9-OverloadedCheckbox eqr7bqq1"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="css-m3g6o6 eqr7bqq2"
                  id=":rk:"
                  name="test"
                  type="checkbox"
                  value="radio 2"
                />
                <svg
                  class="css-55x4xn eqr7bqq4"
                  fill="none"
                  size="24"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="css-16eol3o eqr7bqq6"
                      height="16"
                      rx="2px"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="css-15098z8 ehpbis70"
                >
                  <div
                    class="css-cnr3aj ehpbis70"
                  >
                    <label
                      class="css-1d3w5wq eqr7bqq3"
                      for=":rk:"
                    >
                      Radio 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;
